src/app/index.scss
/**
 *  Do not remove the comments below. It's the markers used by wiredep to inject
 *  sass dependencies when defined in the bower.json of your dependencies
 */
// bower:scss
// endbower

@import url(http://fonts.googleapis.com/css?family=Roboto:300,400,500,700);
@import url(https://fonts.googleapis.com/css?family=Patua+One);
@import url(https://fonts.googleapis.com/css?family=Satisfy);

@font-face {
  font-family: 'Material Icons';
  font-style: normal;
  font-weight: 400;
  src: url(../../bower_components/material-design-iconfont/iconfont/MaterialIcons-Regular.eot); /* For IE6-8 */
  src: local('Material Icons'),
       local('MaterialIcons-Regular'),
       url(../../bower_components/material-design-iconfont/iconfont/MaterialIcons-Regular.woff2) format('woff2'),
       url(../../bower_components/material-design-iconfont/iconfont/MaterialIcons-Regular.woff) format('woff'),
       url(../../bower_components/material-design-iconfont/iconfont/MaterialIcons-Regular.ttf) format('truetype');
}

.material-icons {
  font-family: 'Material Icons';
  font-weight: normal;
  font-style: normal;
  font-size: 24px;  /* Preferred icon size */
  display: inline-block;
  width: 1em;
  height: 1em;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;

  /* Support for all WebKit browsers. */
  -webkit-font-smoothing: antialiased;
  /* Support for Safari and Chrome. */
  text-rendering: optimizeLegibility;

  /* Support for Firefox. */
  -moz-osx-font-smoothing: grayscale;

  /* Support for IE. */
  font-feature-settings: 'liga';
}

h1, h2, h3, h4, h5 {
  font-family: 'Patua One', cursive;
  font-weight: normal;
}

body {
  background: url('/wedding/assets/images/IMG_5440.jpg') no-repeat;
  background-size: cover;
  font-family: Roboto, sans-serif;
  text-align: center;
}

p {
  font-size: 16px;
}

.container {
  box-sizing: border-box;
  margin: 0 auto;
  max-width: 60em;
  padding: 1em;
  width: 100%;
}

.main-container {
  background: rgba(255,255,255,.7);
  margin-top: 7em;
}

.page_title {
  margin-top: 0;
  padding-top: .2em;
}

.cursive {
  font-family: 'Satisfy', cursive;
  font-size: 3em;
  margin: 0 auto .7em;
}


.mdl-button {
  font-size: 12px;
}

.rsvp-form {
  margin-bottom: 2em;
}

.form-actions {
  padding: 2em 0;
}

.spacer {
  padding: .5em;
}

.helper-text {
  font-size: 2em;
  margin-bottom: 1em;
}

.message {
  background: #222;
  color: #fafafa;
  margin-bottom: 1em;
  padding: 1em;
  font-style: italic;
}

img.full-width {
  height: auto;
  width: 100%;
}

.result-table {
  width: 100%;
}
.result-name {
  width: 200px
}
.result-side {
  width: 100px
}

/**
 *  Do not remove the comment below. It's the markers used by gulp-inject to inject
 *  all your sass files automatically
 */
// injector
// endinjector

